# echoswarm

./: .gitignore  BLUEPRINT.md  PLAN.md  README.md  api.py  docker-compose.yml  pyproject.toml  run_swarm.py  test_ws.html
docs/: DECISIONS.md  GRAPH.md  HERMES.md  INTEGRATION.md  SATELLITE.md  SWARM.md
inspiration/: geokg.md
memory/: MEMORY.md  project_architecture.md  project_echoswarm.md
scenarios/: paiporta.json
sops/: latest_feedback.md  paiporta.md  paiporta_history.md  paiporta_v1.md  valencia_v1.md  valencia_v2.md
src/: config.py
src/bridge/: payload.py
src/graph/: loader.py  queries.py
src/hermes/: __init__.py  engine.py
src/learning/: __init__.py  critic.py
src/satellite/: flood_engine.py  local.py
src/swarm/: agents.py  simulation.py
